# python_pkg_projects

./: README.md  makefile  pyproject.toml  requirements.txt
src/fju4ek/: __init__.py  example.py  lab3.py  raven.py
tests/: test_cleantext.py  test_countwords.py  test_fixtures.py  test_func_param.py  test_integration.py  test_lecorbeau.py  test_raven.py  test_tokenizer.py
